--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.2.1",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "browser-sync": "^2.18.12",
     "create-react-class": "^15.5.3",
     "gulp": "^3.9.1",
@@ -32,6 +34,8 @@
     "react-dom": "^15.5.4",
     "react-infinite": "^0.11.0",
     "tiny-lr": "^1.0.3",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.6.0",
     "webpack": "^2.6.1",
     "webpack-stream": "^3.2.0",
     "yargs": "^8.0.1"
@@ -42,12 +46,13 @@
   },
   "babel": {
     "presets": [
-      "react",
+      "env",
       "es2015"
     ],
     "plugins": [
       "transform-es2015-destructuring",
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "transform-vue-jsx"
     ]
   }
 }
