--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tiny-lr": "^1.0.3",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.0",
+    "vuex": "^3.0.1",
     "webpack": "^2.6.1",
     "webpack-stream": "^3.2.0",
     "yargs": "^8.0.1"
